--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -128,6 +128,10 @@ button {
         legend {
             padding: 0 0.5rem;
         }
+
+        div {
+            @include flex-div(column, center, center);
+        }
     
         img {
             border: 2px solid $primary-color;
@@ -157,14 +161,28 @@ button {
     @include flex-div(column, center, space-between);
     margin: 0 auto;
     min-height: 100vh;
-    min-width: 800px;
-    background-color: red;
 
-    .player-hand {
-        @include flex-div(row, center);
+    .game-board-top {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
     }
 
-    .game-middle {
+    .game-board-header {
+        @include flex-div(row, center, none);
+        gap: 2rem;
+        position: absolute;
+        top: 50px;
+        left: 50px;
+    }
+
+    .player-hand {
+        @include flex-div(row, center, center);
+        height: 130px;
+        min-width: 650px;
+    }
+
+    .game-board-middle {
         display: flex;
         gap: 1rem;
     }
@@ -178,3 +196,8 @@ button {
     }
 }
 
+.tooltip {
+    border: 1px solid $secondary-color;
+    border-radius: 50%;
+    padding: 0.25rem 0.75rem;
+}
